--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sliding Puzzle</title>
-  <meta name="description" content="Sliding puzzle game created with html css and javascript. Try to recreate the correct image.">
+  
+  <meta name="description" content="Play this Sliding puzzle game and recreate the correct image.">
+  <meta name="keywords" content="Sliding Puzzle">
+  <meta name="author" content="Rémy Beumier">
+
+  <meta property="og:title" content="Sliding Puzzle">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="https://beumsk.github.io/Sliding-Puzzle">
+  <meta property="og:image" content="https://beumsk.github.io/Sliding-Puzzle/cover.jpg">
+  <meta property="og:image:secure_url" content="https://beumsk.github.io/Sliding-Puzzle/cover.jpg">
+  <meta property="og:description" content="Play this Sliding puzzle game and recreate the correct image.">
+  
   <link rel="stylesheet" href="css/style.css">
+  
+  <title>Sliding Puzzle</title>
 </head>
 
 <body>
