jquery to vanilla js

--- a/index.html
+++ b/index.html
@@ -17,31 +17,30 @@
   <meta property="og:image:secure_url" content="https://beumsk.github.io/Sliding-Puzzle/cover.jpg">
   <meta property="og:description" content="Play this Sliding puzzle game and recreate the correct image.">
   
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="./style.css">
   
   <title>Sliding Puzzle</title>
 </head>
 
 <body>
 
-  
 <header>
   <h1>Sliding Puzzle</h1>
 </header>
 
 <section class="puzzle"></section>
 
+<div class="modal">
+  <div class="modal__box">
+    <div class="modal__button">PLAY</div>
+  </div>
+</div>
+
 <footer>
   <p>Created by <a href="https://remybeumier.be" target="_blank">Rémy Beumier</a></p>
 </footer>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 
-  
-
-    <script  src="js/index.js"></script>
-
-
-
+<script  src="./script.js"></script>
 
 </body>
 
